(Format: Year/Month/Day)
Changes for 0.9.10:
*04/06/27:
  * Fixed bug in systray (Henrik)
    (this fixes the problem with "sim" in systray)
    - It didn't force client position on configure request
    SystemTray.cc 
  * Added toggle menu (Henrik)
    - redraws each time a toggle menu item changes
    ToggleMenu.hh, FbMenu.hh, LayerMenu.hh, FbTk/Menu.cc
  * Fixed bug in Iconbar mode menu (Henrik)
    IconbarTool.cc
  * Some cleaning in the menu code (Henrik)
    Menu.hh/cc
*04/06/21:
  * Fix and tidy KDE dockapps on [re]start (Simon)
    - and don't listen to screen reconfigure sig anymore in toolbar
    Screen.hh/cc Toolbar.cc fluxbox.cc
  * Fix autogrouping issue where windows wouldn't show (Simon)
    Workspace.cc
*04/06/20:
  * Clean out old nls stuff. Move in those strings that 
    are still in the new names, new Makefiles, etc (Simon)
    - need to get script to help people translate
    nls/*/Makefile.am nls/*/Translation.m  -nls/*/*.m    
  * Fix various systray issues (Simon)
    SystemTray.cc Toolbar.cc ToolbarItem.hh
  * Support _NET_WM_WINDOW_TYPE_DESKTOP (Simon)
    - eg nautilus desktop windows are on the bottom, not tabable, etc
    Ewmh.hh/cc Window.hh/cc
  * Fix honouring of initial state on window open (Simon)
    Window.hh/cc Screen.cc
*04/06/18:
  * background xmessage in fbsetbg so it doesn't block anything
    also set the "okay" button to default so you can just press enter
    (Simon)
    fbsetbg
*04/06/17:
  * Improve rendering speed of toolbar (Simon)
    - remove many redundant renders (esp. startup)
    - only update clock if the text has changed
    - fix transparency and border on most items
    IconbarTool.hh/cc IconButton.cc Toolbar.cc Container.cc
    ClockTool.cc WorkspaceNameTool.cc
*04/06/14:
  * More menu transparency improvements (Henrik)
    Menu.cc
*04/06/13:
  * More menu transparency improvements (Henrik)
    Menu.hh/cc, MenuTheme.hh
*04/06/12:
  * Updated japanese locales from Yasuhiro Takabayashi